Add app introduction for Samsung.
The introduction will be shown only for the first time user launches the app.
Using temporary assets for now.

--- a/project/src/samsung/AndroidManifest.xml
+++ b/project/src/samsung/AndroidManifest.xml
@@ -70,6 +70,11 @@
 
         </activity>
 
+        <activity
+            android:name="com.expedia.bookings.activity.AppIntroActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Phone" />
+
         <receiver
             android:name="com.AdX.tag.AdXAppTracker"
             android:exported="true" >
