--- a/project/build.gradle
+++ b/project/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:palette-v7:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:gridlayout-v7:${rootProject.ext.supportLibVersion}"
-    compile "com.android.support:recyclerview-v7:21.0.3"
+    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:cardview-v7:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
 
