s/4756 integarting tune sdk

--- a/project/src/expedia/AndroidManifest.xml
+++ b/project/src/expedia/AndroidManifest.xml
@@ -134,6 +134,13 @@
             </intent-filter>
         </receiver>
 
+        <!-- Add Tune library receiver -->
+        <receiver android:name="com.mobileapptracker.Tracker">
+            <intent-filter>
+                <action android:name="com.android.vending.INSTALL_REFERRER" />
+            </intent-filter>
+        </receiver>
+
         <service android:name="com.kahuna.sdk.KahunaPushService" />
 
 
