--- a/project/build.gradle
+++ b/project/build.gradle
@@ -30,6 +30,7 @@ dependencies {
             'admsAppLibrary-3.0.5.jar',
             'adxtag3.2.6.jar',
             'Kahuna.jar',
+            'MobileAppTracker-3.9.1.jar',
     ])
     compile project(':lib:FlightLib')
     compile project(':lib:Utils')
