--- a/project/proguard.cfg
+++ b/project/proguard.cfg
@@ -102,6 +102,11 @@
 	*;
 }
 
+# Keep tune sdk, it is already proguarded
+-keep public class com.mobileapptracker.** {
+	public *;
+}
+
 # Keep crashlytics sdk, it is already proguarded
 -keep class com.crashlytics.** {
 	*;
