Introduce MVVM into the material hotels codebase
- Move classes into better package names
- Rename some classes to make it obvious that it is hotels code
- Implement MVVM for the material hotel search form
- Write traveler picker test to put my money where my big MVVM mouth is

--- a/project/src/debug/AndroidManifest.xml
+++ b/project/src/debug/AndroidManifest.xml
@@ -13,7 +13,7 @@
         </activity>
 
         <activity
-            android:name="com.expedia.bookings.ui.HotelActivity"
+            android:name="com.expedia.ui.HotelActivity"
             android:taskAffinity="com.expedia.bookings.ui.HotelActivity"
             android:label="New Hotels"
             android:theme="@style/V2.Theme.Hotels" >
