--- a/project/build.gradle
+++ b/project/build.gradle
@@ -99,10 +99,10 @@ dependencies {
 
     // Test dependencies
     testCompile 'junit:junit:4.12'
-    def roboVersion = '3.0-rc3'
+    def roboVersion = '3.0'
     testCompile "org.robolectric:robolectric:${roboVersion}"
     testCompile "org.robolectric:shadows-multidex:${roboVersion}"
-    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile 'org.mockito:mockito-core:2.0.13-beta'
 
     def espressoVersion = '2.2'
     androidTestCompile ("com.android.support.test.espresso:espresso-core:${espressoVersion}"){
