--- a/project/src/main/AndroidManifest.xml
+++ b/project/src/main/AndroidManifest.xml
@@ -249,7 +249,7 @@
             android:name="com.expedia.bookings.activity.AccountLibActivity"
             android:configChanges="screenSize"
             android:launchMode="singleTop"
-            android:theme="@style/LaunchTheme"
+            android:theme="@style/AccountLibTheme"
             android:windowSoftInputMode="adjustResize" />
 
         <!-- Cars activity -->
