Add Omniture and AdX tracking
Also fixed an issue where Facebook required an email permission

--- a/project/src/main/AndroidManifest.xml
+++ b/project/src/main/AndroidManifest.xml
@@ -247,8 +247,10 @@
 
         <activity
             android:name="com.expedia.bookings.activity.AccountLibActivity"
+            android:configChanges="screenSize"
             android:launchMode="singleTop"
-            android:theme="@style/LaunchTheme" />
+            android:theme="@style/LaunchTheme"
+            android:windowSoftInputMode="adjustResize" />
 
         <!-- Cars activity -->
 
