--- a/project/build.gradle
+++ b/project/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 apply plugin: 'checkstyle'
+apply plugin: 'fork'
 
 repositories {
     mavenCentral()
