Adding real assets for Samsung app introduction.

--- a/project/src/samsung/AndroidManifest.xml
+++ b/project/src/samsung/AndroidManifest.xml
@@ -73,7 +73,7 @@
         <activity
             android:name="com.expedia.bookings.activity.AppIntroActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Phone" />
+            android:theme="@style/Theme.Phone.NoActionBar" />
 
         <receiver
             android:name="com.AdX.tag.AdXAppTracker"
