--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 
     repositories {
         maven { url 'https://maven.fabric.io/public' }
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.18.0'
