--- a/project/build.gradle
+++ b/project/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'checkstyle'
 apply plugin: 'fork'
 
 repositories {
-    mavenCentral()
+    jcenter()
     maven { url 'https://maven.fabric.io/public' }
     maven { url 'http://www.leanplum.com/leanplum-sdks/' }
     maven {
