--- a/project/build.gradle
+++ b/project/build.gradle
@@ -28,7 +28,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: [
             'activeandroid-20131111.jar',
-            'admsAppLibrary-3.0.5.jar',
+            'ADMS_AppLibrary-3.2.7-Android.jar',
             'adxtag3.2.6.jar',
             'MobileAppTracker-3.9.1.jar',
     ])
