Samsung Bug Fix: #3639 Samsung: Using Expedia or Samsung strings Replace MY TRIPS with YOUR TRIPS Replace Mobile Exclusive with "for Samsung"

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -239,7 +239,7 @@ android {
         }
 
         samsung {
-            buildConfigField "String", "brand", "\"Samsung\""
+            buildConfigField "String", "brand", "\"Expedia\""
             buildConfigField "String", "MEDIA_URL", "\"https://media.expedia.com\""
             applicationId "com.samsung.travel.android"
 
