Cleanup in ExpediaBookingApp
- Change generated booleans for release and usability. This way inspections
  don't consider the fields always true/false
- Clean up IDFA stuff and typos in ExpediaBookingApp

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -260,8 +260,8 @@ android {
             ext.betaDistributionReleaseNotesFilePath = CHANGELOG_PATH
             ext.betaDistributionGroupAliasesFilePath = CRASHLYTICS_BETA_GROUPS_PATH
 
-            buildConfigField "boolean", "RELEASE", "false"
-            buildConfigField "boolean", "USABILITY", GradleUtil.isUsabilityBuild(project) ? "true" : "false"
+            buildConfigField "boolean", "RELEASE", "Boolean.parseBoolean(\"false\")"
+            buildConfigField "boolean", "USABILITY", GradleUtil.isUsabilityBuild(project) ? "Boolean.parseBoolean(\"true\")" : "Boolean.parseBoolean(\"false\")"
         }
 
         release {
