--- a/project/build.gradle
+++ b/project/build.gradle
@@ -61,14 +61,14 @@ dependencies {
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.okio:okio:1.4.0'
-    compile 'com.squareup:otto:1.3.5'
+    compile 'com.squareup.okio:okio:1.5.0'
+    compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.phrase:phrase:1.1.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.leanplum:Leanplum:1.2.15'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
-    compile 'io.reactivex:rxandroid:0.24.0'
+    compile 'io.reactivex:rxandroid:0.25.0'
     compile ('com.wefika:flowlayout:0.4.0') {
         exclude group: 'com.intellij'
     }
@@ -78,7 +78,7 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.0.1'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
-    compile ('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
+    compile ('com.crashlytics.sdk.android:crashlytics:2.5.0@aar') {
         transitive = true
     }
 
@@ -101,7 +101,7 @@ dependencies {
     def roboVersion = '3.0'
     testCompile "org.robolectric:robolectric:${roboVersion}"
     testCompile "org.robolectric:shadows-multidex:${roboVersion}"
-    testCompile 'org.mockito:mockito-core:2.0.13-beta'
+    testCompile 'org.mockito:mockito-core:2.0.31-beta'
 
     def espressoVersion = '2.2'
     androidTestCompile ("com.android.support.test.espresso:espresso-core:${espressoVersion}"){
@@ -113,8 +113,12 @@ dependencies {
         exclude group: 'javax.inject'
     }
 
-    androidTestCompile 'com.android.support.test:rules:0.3'
-    androidTestCompile "com.android.support.test.espresso:espresso-intents:${espressoVersion}"
+    androidTestCompile ('com.android.support.test:rules:0.3') {
+        exclude group: 'com.android.support'
+    }
+    androidTestCompile ("com.android.support.test.espresso:espresso-intents:${espressoVersion}") {
+        exclude group: 'com.android.support'
+    }
 
     androidTestCompile fileTree(dir: 'libs', include: [
             'spoon-client-1.1.3-EXP.jar',
