Fix proguard dontwarn setting
Proguard was updated with the 1.3 android plugin and the file format for
-dontwarn changed. This updates the config to ignore all warnings again

--- a/project/proguard.cfg
+++ b/project/proguard.cfg
@@ -5,7 +5,7 @@
 -verbose
 -dontoptimize
 -dontobfuscate
--dontwarn
+-dontwarn **
 
 # Keep our application class intact
 -keep public class * extends android.app.Application {
