Added Samsung's logo on Info screen action bar

--- a/project/src/main/AndroidManifest.xml
+++ b/project/src/main/AndroidManifest.xml
@@ -272,7 +272,7 @@
 
         <activity
             android:name="com.expedia.bookings.activity.AboutActivity"
-            android:theme="@style/Theme.Phone.WebView" />
+            android:theme="@style/Theme.Phone.AboutActivity" />
         <activity
             android:name="com.expedia.bookings.activity.ExpediaBookingPreferenceActivity"
             android:screenOrientation="portrait"
