Tests for filters - Cars

--- a/lib/mocked/templates/m/api/cars/search/airport/happy.json
+++ b/lib/mocked/templates/m/api/cars/search/airport/happy.json
@@ -48,7 +48,7 @@
                 "childCapacity": 0,
                 "drive": "TWO_WHEEL_DRIVE",
                 "fuel": "UNKNOWN",
-                "hasAirConditioning": true,
+                "hasAirConditioning": false,
                 "largeLuggageCapacity": 2,
                 "makes": [
                     "Toyota Yaris"
