--- a/lib/mocked/templates/m/api/hotel/search/happy.json
+++ b/lib/mocked/templates/m/api/hotel/search/happy.json
@@ -21,6 +21,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "109.00",
                 "averageRate": "109.00",
@@ -78,6 +79,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "1029.00",
                 "averageRate": "1029.00",
@@ -133,6 +135,7 @@
             "latitude": "37.726088",
             "locationDescription": "Union Square",
             "longitude": "-122.198956",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "209.00",
                 "averageRate": "209.00",
@@ -187,6 +190,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "109.00",
                 "averageRate": "109.00",
@@ -241,6 +245,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "109.00",
                 "averageRate": "109.00",
@@ -295,6 +300,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "109.00",
                 "averageRate": "109.00",
@@ -349,6 +355,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "109.00",
                 "averageRate": "109.00",
@@ -403,6 +410,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "284.40",
                 "averageRate": "241.40",
@@ -463,6 +471,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "109.00",
                 "averageRate": "109.00",
@@ -517,6 +526,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "109.00",
                 "averageRate": "109.00",
@@ -571,6 +581,7 @@
             "latitude": "37.78458",
             "locationDescription": "Union Square - Convention Center",
             "longitude": "-122.40854",
+            "locationId":"800129",
             "lowRateInfo": {
                 "averageBaseRate": "109.00",
                 "averageRate": "109.00",
@@ -605,5 +616,6 @@
             "totalRecommendations": "0",
             "totalReviews": "100"
         }
-    ]
+    ],
+    "allNeighborhoodsInSearchRegion":[{"name":"San Francisco (QSF-All Airports)","id":6139039}]
 }
