--- a/project/src/debug/AndroidManifest.xml
+++ b/project/src/debug/AndroidManifest.xml
@@ -16,6 +16,7 @@
             android:name="com.expedia.ui.HotelActivity"
             android:taskAffinity="com.expedia.bookings.ui.HotelActivity"
             android:label="New Hotels"
+            android:screenOrientation="portrait"
             android:theme="@style/V2.Theme.Hotels" >
 
             <intent-filter>
