--- a/build.gradle
+++ b/build.gradle
@@ -4,19 +4,16 @@ buildscript {
     ext.kotlin_version = '0.12.1230'
 
     repositories {
-        maven { url 'https://maven.fabric.io/public' }
         jcenter()
-        maven {
-            url 'https://repos.zeroturnaround.com/nexus/content/repositories/zt-public-releases'
-        }
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://repos.zeroturnaround.com/nexus/content/repositories/zt-public-releases' }
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.19.2'
-        classpath 'com.android.tools.build:gradle:1.3.0'
-        // This does not break the build when Android Studio is missing the JRebel for Android plugin.
-        classpath 'com.zeroturnaround.jrebel.android:jr-android-gradle:0.8.+'
+        classpath 'com.zeroturnaround.jrebel.android:jr-android-gradle:0.8.0.72'
+        classpath 'com.android.tools.build:gradle:1.3.1'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
         classpath 'com.shazam.fork:fork-gradle-plugin:1.0.0'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
