--- a/lib/mocked/templates/m/api/hotel/search/happy.json
+++ b/lib/mocked/templates/m/api/hotel/search/happy.json
@@ -45,6 +45,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "happypath",
+            "localizedName": "happypath",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -103,6 +104,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "hotel_price_change",
+            "localizedName": "hotel_price_change",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -159,6 +161,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "vip_hotel",
+            "localizedName": "vip_hotel",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -214,6 +217,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "error_room_unavailable",
+            "localizedName": "error_room_unavailable",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -269,6 +273,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "error_create_trip",
+            "localizedName": "error_create_trip",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -324,6 +329,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "error_checkout_session_timeout",
+            "localizedName":"error_checkout_session_timeout",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -379,6 +385,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "error_checkout_card_limit_exceeded",
+            "localizedName": "error_checkout_card_limit_exceeded",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -440,6 +447,7 @@
                 "airAttached": true
             },
             "name": "air_attached_hotel",
+            "localizedName": "air_attached_hotel",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -495,6 +503,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "valid_forms_of_payment",
+            "localizedName": "valid_forms_of_payment",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -550,6 +559,7 @@
                 "userPriceType": "PerNightRateNoTaxes"
             },
             "name": "hotel_coupon_errors",
+            "localizedName": "hotel_coupon_errors",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
@@ -575,7 +585,7 @@
                 }
             },
             "hotelGuestRating": "4.4",
-            "hotelId": "hotel_renovation_notice",
+            "hotelId": "hotel_etp_renovation_resort",
             "hotelStarRating": "4.0",
             "largeThumbnailUrl": "/hotels/1000000/20000/12600/12539/12539_81_d.jpg",
             "latitude": "37.78458",
@@ -604,7 +614,8 @@
                 "totalPriceWithMandatoryFees": "109.00",
                 "userPriceType": "PerNightRateNoTaxes"
             },
-            "name": "hotel_renovation_notice",
+            "name": "hotel_etp_renovation_resort",
+            "localizedName": "hotel_etp_renovation_resort",
             "postalCode": "94102",
             "proximityDistanceInKiloMeters": "0.0",
             "proximityDistanceInMiles": "0.0",
