s/4739 Material hotel details
- small design polish
- parse and display amenities, fees, and other texts
- unit test to test the parsing
- click listener for pay later message info view
- show unique amenity on the expanded room view
- unit test to test the common value adds list
- unit test to test unique value adds for each room

--- a/lib/mocked/templates/m/api/hotel/offers/happypath.json
+++ b/lib/mocked/templates/m/api/hotel/offers/happypath.json
@@ -105,7 +105,16 @@
             "roomTypeDescription": "${hotelId}_0",
             "smokingPreferences": "NS",
             "supplierType": "MERCHANT",
-            "valueAdds": []
+            "valueAdds": [
+                {
+                    "id": "128",
+                    "description": "Free Parking"
+                },
+                {
+                    "id": "32768",
+                    "description": "Free Airport Shuttle"
+                }
+            ]
         },
         {
             "bedTypes": [
@@ -218,7 +227,16 @@
             "roomTypeDescription": "happypath_2_night_stay_0",
             "smokingPreferences": "NS",
             "supplierType": "MERCHANT",
-            "valueAdds": []
+            "valueAdds": [
+                {
+                    "id": "2",
+                    "description": "Continental Breakfast"
+                },
+                {
+                    "id": "32768",
+                    "description": "Free Airport Shuttle"
+                }
+            ]
         }
     ],
     "hotelStarRating": "4.0",
