Lastminute icons updated as per selected POS

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -241,7 +241,7 @@ android {
         }
 
         lastMinute {
-            buildConfigField "String", "brand", "\"lastminute.com.au\""
+            buildConfigField "String", "brand", "\"LM AU & NZ\""
             buildConfigField "String", "MEDIA_URL", "\"https://media.expedia.com\""
             applicationId "com.lastminute.android"
             def major = 3
