--- a/project/src/wotif/AndroidManifest.xml
+++ b/project/src/wotif/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <!-- Deep link routing activity -->
         <activity
             android:name="com.expedia.bookings.activity.DeepLinkRouterActivity"
-            android:theme="@android:style/Theme.NoDisplay" >
+            android:theme="@android:style/Theme.NoDisplay" android:launchMode="singleTask" >
+
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -36,6 +37,11 @@
                 <data android:host="showTrips" />
                 <data android:host="hotelSearch" />
                 <data android:host="flightSearch" />
+                <data android:host="destination" />
+                <data android:host="carSearch"/>
+                <data android:host="activitySearch"/>
+                <data android:host="signIn"/>
+
                 <!-- We will handle iOS implementation of ItinSharing as well, just cause we can -->
                 <data android:host="addSharedItinerary" />
             </intent-filter>
