d/5222 hiding rating and amenities conatiner - updated the UI test to verify it.

--- a/lib/mocked/templates/m/api/hotel/search/happy.json
+++ b/lib/mocked/templates/m/api/hotel/search/happy.json
@@ -630,8 +630,7 @@
             "stateProvinceCode": "CA",
             "supplierType": "MERCHANT",
             "thumbnailUrl": "/hotels/1000000/20000/12600/12539/12539_81_n.jpg",
-            "totalRecommendations": "0",
-            "totalReviews": "100"
+            "totalRecommendations": "0"
         },
         {
             "address": "55 Cyril Magnin St",
