--- a/project/build.gradle
+++ b/project/build.gradle
@@ -61,8 +61,8 @@ dependencies {
     compile "com.google.android.gms:play-services-location:${rootProject.ext.googlePlayServicesVersion}"
 
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.okio:okio:1.5.0'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.squareup.okio:okio:1.6.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.phrase:phrase:1.1.0'
     compile 'com.google.code.gson:gson:2.3.1'
@@ -88,7 +88,9 @@ dependencies {
     debugCompile "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakCanaryVersion}"
 
-    debugCompile 'com.squareup.okhttp:mockwebserver:2.4.0'
+    // junit is only for mockwebserver
+    debugCompile 'com.squareup.okhttp:mockwebserver:2.5.0'
+    debugCompile 'junit:junit:4.12'
     debugCompile (project(':lib:mocked:mocke3')) {
         transitive = false
     }
