--- a/project/proguard.cfg
+++ b/project/proguard.cfg
@@ -113,21 +113,28 @@
 }
 
 # Keep all of okhttp
--keep class com.squareup.okhttp.** {
-	*;
-}
+-keep class com.squareup.okhttp.** { *; }
+-keep interface com.squareup.okhttp.** { *; }
 
 # Keep all of retrofit
 -keep class retrofit.** {
     *;
 }
 
+# The remainder is only important for debug builds
+
 # Keep stetho. Release builds don't build the code in at all so this is safe
 -keep class com.facebook.stetho.** {
 	*;
 }
 
+# Keep bouncy castle,
+-keep class org.bouncycastle.** { *; }
+
 # Keep ExpediaDispatcher
--keep class com.mobiata.mocke3.** {
-	*;
-}
+-keep class com.mobiata.mocke3.** { *; }
+
+# Keep junit and hamcrest because tests don't run without it
+-keep class org.junit.** { *; }
+-keep class org.hamcrest.** { *; }
+
