VSC: Launcher icon and app name updated

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -191,7 +191,7 @@ android {
         }
 
         voyages {
-            buildConfigField "String", "brand", "\"VSC\""
+            buildConfigField "String", "brand", "\"Agence Voyages-SNCF.com\""
             buildConfigField "String", "MEDIA_URL", "\"https://media.expedia.com\""
             applicationId "com.expedia.bookings.vsc"
 
