--- a/project/src/airAsiaGo/AndroidManifest.xml
+++ b/project/src/airAsiaGo/AndroidManifest.xml
@@ -55,6 +55,7 @@
                 <data android:host="flightSearch" />
                 <data android:host="destination" />
                 <data android:host="activitySearch"/>
+                <data android:host="carSearch"/>
                 <data android:host="signIn"/>
 
                 <!-- We will handle iOS implementation of ItinSharing as well, just cause we can -->
