--- a/project/src/voyages/AndroidManifest.xml
+++ b/project/src/voyages/AndroidManifest.xml
@@ -36,6 +36,7 @@
                 <data android:host="hotelSearch" />
                 <data android:host="flightSearch" />
                 <data android:host="destination" />
+                <data android:host="carSearch"/>
                 <data android:host="activitySearch"/>
                 <data android:host="signIn"/>
 
