--- a/project/build.gradle
+++ b/project/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     }
     compile 'com.expedia:svg-android:0.1.0'
     compile 'com.expedia:android-account-lib:0.5.12'
+    compile 'com.expedia:android-rangeseekbar:1.0.1'
     compile 'com.dgmltn:share-everywhere:1.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
 
