s/5422 implement opt-In/Out marketing emails checkbox and test

--- a/lib/mocked/templates/m/api/hotel/trip/create/happypath_0.json
+++ b/lib/mocked/templates/m/api/hotel/trip/create/happypath_0.json
@@ -330,6 +330,7 @@
     "tealeafTransactionId": "tealeafHotel:${productKey}",
     "tripId": "${productKey}",
     "userId": 4019550,
+    "guestUserPromoEmailOptInStatus": "ALWAYS",
     "validFormsOfPayment": [
         {
             "name": "AmericanExpress"
