--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ buildscript {
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
-        classpath 'com.shazam.fork:fork-gradle-plugin:1.0.0'
+        classpath ('com.shazam.fork:fork-gradle-plugin:1.0.0') {
+            exclude group: 'com.google.guava'
+        }
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
     }
 }
